fixed alignment issue of content on contact-us page
removed containers for office elements and tweaked padding and other elements to make it work. Wasnt straightforward

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,7 @@ footer, .bottom-footer {
 
 .cu-offices-container {
   margin-top: 20px;
+  padding-left: 0 !important;
 }
 
 .cu-offices-wrapper {
@@ -192,7 +193,7 @@ footer, .bottom-footer {
 }
 
 .cu-offices-element {
-  margin-top: 30px;
+  margin: 30px 15px 0 15px;
   -webkit-box-shadow: 0 3px 35px rgba(0, 0, 0, 0.1);
           box-shadow: 0 3px 35px rgba(0, 0, 0, 0.1);
 }
@@ -224,7 +225,7 @@ footer, .bottom-footer {
 }
 .offices-content h2 {
   margin: 0;
-  font-size: 20px;
+  font-size: 19px;
   font-weight: 400;
   color: #333645;
 }
@@ -509,7 +510,6 @@ input[type=checkbox]:checked + .custom-checkbox:before {
   }
   .middle-header .container h1 {
     color: #333645;
-    padding-left: 20px;
   }
   .cu-offices-wrapper {
     -webkit-box-orient: horizontal;
